[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "correctover-runtime-guard"
version = "1.4.0"
description = "Real-time RCE/SSRF/credential leak interception for AI agents — 22µs P50, 99.7% detection rate. MCP Server mode with diagnose_error, fault patterns, repair suggestions."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Correctover", email = "wangguigui@correctover.com" }]
keywords = ["runtime-guard", "rce", "ssrf", "credential-leak", "mcp", "ai-agent", "correctover", "security", "guardrail", "interception", "real-time"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "fastmcp>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://correctover.com"
Repository = "https://github.com/Correctover/runtime-guard"
Issues = "https://github.com/Correctover/runtime-guard/issues"

[project.scripts]
correctover-runtime-guard = "correctover_agent.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["correctover_agent"]
