[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "correctover-runtime-guard"
version = "2.1.1"
description = "Real-time RCE/SSRF/credential leak interception for AI agents — 22µs P50, 99.7% detection rate. MCP Server mode with diagnose_error, fault patterns, repair suggestions. Pro license required for full features."
readme = "README.md"
license = { text = "Proprietary Commercial License" }
authors = [{ name = "Correctover", email = "wangguigui@correctover.com" }]
keywords = ["runtime-guard", "rce", "ssrf", "credential-leak", "mcp", "ai-agent", "correctover", "security", "guardrail", "interception", "real-time"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "fastmcp>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://correctover.com"
Repository = "https://github.com/Correctover/runtime-guard"
Issues = "https://github.com/Correctover/runtime-guard/issues"
Pricing = "https://correctover.com/checkout"

[project.scripts]
correctover-runtime-guard = "correctover_agent.cli:cli"
correctover = "correctover_agent.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["correctover_agent"]
